--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <script src="/socket.io/socket.io.js"></script>
 <script>
-  var socket = io.connect('http://localhost');
+  var socket = io.connect('http://localhost:82');
   socket.on('news', function (data) {
     console.log(data);
     //socket.emit('my other event', { my: 'data' });
