--- a/audio.html
+++ b/audio.html
@@ -13,13 +13,13 @@
   <button onclick="emitStop()" >Stop</button>
 
 	<script>
+  console.log(location.origin);
 	var context = new window.webkitAudioContext();
 	var source = null;
 	var audioBuffer = null;
   var parts = [];
   var fileReader = new FileReader();
 	var client = new BinaryClient('ws://localhost:9000/binary-endpoint');
-  console.log(location.)
 	client.on('stream', function(stream, meta){
 		var start = new Date().getTime();
 		var laststep = new Date().getTime();
