--- a/audio.html
+++ b/audio.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-  <script src="socket.io/socket.io.js"></script>
+  <!-- // <script src="socket.io/socket.io.js"></script> -->
   <title>Binaryjs Audio</title>
   <script src="http://cdn.binaryjs.com/0/binary.js"></script>
 </head>
