--- a/audio.html
+++ b/audio.html
@@ -19,33 +19,33 @@
   var parts = [];
   var fileReader = new FileReader();
   var binaryHost = location.origin.replace(/^http/, 'ws');
-	// var client = new BinaryClient(binaryHost + '/binary-endpoint');
-	// client.on('stream', function(stream, meta){
- //    var begin = new Date();
-	// 	var start = begin.getTime();
-	// 	var laststep = new Date().getTime();
- //    	// var test = new MediaSource();
- //    	// var audio = document.createElement("audio");
- //    	// audio.src = (window.URL || window.webkitURL).createObjectURL(test);
- //      var size = 0;
- //    	stream.on('data', function(data){
- //    		var now = new Date().getTime();
- //    		console.log("time since last buffer received: " + (now-laststep) + " ms");
- //    		laststep = new Date().getTime();
- //      	parts.push(data);
- //        size += data.byteLength;
- //    	});
- //    	stream.on('end', function(){
- //    		var now = new Date().getTime();
- //    		console.log("time to fetch all data: " + (now-start) + " ms");
- //      		console.log("total buffers: " + parts.length + " , total size: " + (size/1000000) + " mb");
- //      		//initSound(parts);
- //          var blob = new Blob(parts);
- //          fileReader.readAsArrayBuffer(blob);
- //          console.log("past filereader");
- //          console.log("first data recieved at " + begin + ' miliseconds ' + begin.getMilliseconds());
- //    	});
-	// });
+	var client = new BinaryClient(binaryHost + '/binary-endpoint');
+	client.on('stream', function(stream, meta){
+    var begin = new Date();
+		var start = begin.getTime();
+		var laststep = new Date().getTime();
+    	// var test = new MediaSource();
+    	// var audio = document.createElement("audio");
+    	// audio.src = (window.URL || window.webkitURL).createObjectURL(test);
+      var size = 0;
+    	stream.on('data', function(data){
+    		var now = new Date().getTime();
+    		console.log("time since last buffer received: " + (now-laststep) + " ms");
+    		laststep = new Date().getTime();
+      	parts.push(data);
+        size += data.byteLength;
+    	});
+    	stream.on('end', function(){
+    		var now = new Date().getTime();
+    		console.log("time to fetch all data: " + (now-start) + " ms");
+      		console.log("total buffers: " + parts.length + " , total size: " + (size/1000000) + " mb");
+      		//initSound(parts);
+          var blob = new Blob(parts);
+          fileReader.readAsArrayBuffer(blob);
+          console.log("past filereader");
+          console.log("first data recieved at " + begin + ' miliseconds ' + begin.getMilliseconds());
+    	});
+	});
 	var fileInput = document.querySelector('input[type="file"]');
 	fileInput.addEventListener('change', function(event){
         var file = event.target.files[0];
