--- a/audio.html
+++ b/audio.html
@@ -23,7 +23,9 @@
   //Stream source?
   var streamingAudioSource = 0;
   var streamData = [];
-
+  var startTime = 0;
+  var startOffset = 0;
+  var isBufferReady = 1;
 
 	var client = new BinaryClient('ws://localhost:9000/binary-endpoint');
 	client.on('stream', function(stream, meta){
@@ -32,23 +34,37 @@
     	// var test = new MediaSource();
     	// var audio = document.createElement("audio");
     	// audio.src = (window.URL || window.webkitURL).createObjectURL(test);
+      
+      // Reset Variables
+      if(source){
+        source.noteOff(0);
+      }
+      source = null;
+      audioBuffer = null;
+      parts = [];
+      streamData = [];
+      startTime = 0;
+      startOffset = 0;
+
       var size = 0;
+
     	stream.on('data', function(data){
+
     		var now = new Date().getTime();
     		console.log("time since last buffer received: " + (now-laststep) + " ms");
     		laststep = new Date().getTime();
       	parts.push(data);
         size += data.byteLength;
         streamData.push(data);
-        //streamAudio();
+        streamAudio();
     	});
     	stream.on('end', function(){
     		var now = new Date().getTime();
     		console.log("time to fetch all data: " + (now-start) + " ms");
       		console.log("total buffers: " + parts.length + " , total size: " + (size/1000000) + " mb");
       		//initSound(parts);
-          var blob = new Blob(parts);
-          fileReader.readAsArrayBuffer(blob);
+          //var blob = new Blob(parts);
+          //fileReader.readAsArrayBuffer(blob);
           console.log("past filereader");
 
           //createStream();
@@ -56,9 +72,11 @@
 	});
 
   function streamAudio(){
-    var blob = new Blob(parts);
-    fileReader.readAsArrayBuffer(streamData);
-
+    if(isBufferReady){
+      var blob = new Blob(streamData);
+      fileReader.readAsArrayBuffer(blob);
+      isBufferReady = 0;
+    }
   }
 
   function createStream(){
@@ -73,35 +91,24 @@
     }, false);
 
   fileReader.onloadend =  function(e){
-    var sound = fileReader.result;
-    initSound(sound);
+
+    initSound(fileReader.result);
     console.log("sound shoud be playing");
+
+    // Get more blobs when finished:
+    isBufferReady = 1;
+
   };
 
-  function initSound(arrayBuffer) {
-  	context.decodeAudioData(arrayBuffer, function(buffer) {
+  function initSound(buf) {
+  	context.decodeAudioData(buf, function(buffer) {
   		audioBuffer = buffer;
-      var buttons = document.querySelectorAll('button');
-      buttons[0].disabled = false;
-      buttons[1].disabled = false;
-      playSound();
+      playLocal();
   	}, function(e) {
   		console.log('Error decoding file', e);
 		});
   }
-  function stopSound() {
-    if (source) {
-      source.noteOff(0);
-    }
-  }
-  function playSound() {
-  	source = context.createBufferSource();
-		source.buffer = audioBuffer;
-		source.loop = false;
-		source.connect(context.destination);
-		// source.noteOn(0);
 
-  }
 
 function stopLocal() {
   if (source) {
@@ -112,12 +119,14 @@ function stopLocal() {
 function playLocal() {
   if (source) {
     source.noteOff(0);
+    startOffset += context.currentTime - startTime;
   }
+  startTime = context.currentTime;
   source = context.createBufferSource();
   source.buffer = audioBuffer;
   source.loop = false;
   source.connect(context.destination);
-  source.noteOn(0); // Play immediately.
+  source.start(0, startOffset);
 }
 
 
