--- a/audio.html
+++ b/audio.html
@@ -7,6 +7,7 @@
   <title>Binaryjs Audio</title>
   <script src="http://cdn.binaryjs.com/0/binary.js"></script>
   <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <link rel="stylesheet" href="/bootstrap.min.css">
 </head>
 <body style="background-size:cover">
 	<input type="file" id="fileinput" accept="audio/*" />
