--- a/audio.html
+++ b/audio.html
@@ -361,7 +361,7 @@ function playLocal() {
 socket.on('play', function (data) {
   // var text = document.getElementById('text').value;
   // if (data != text) {
-    console.log('playing');
+    console.log('playing with ' + data);
     shouldPlay = 1;
     playLocal();
   // }
